Correction of saving

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -463,8 +463,8 @@
         mult = parsedData.mult;
         autoClicker = parsedData.autoClicker;
         buyingDic = parsedData.buyingDic;
-        priceAdd = parsedData.;
-        priceMult = parsedData.;
+        priceAdd = parsedData.priceAdd;
+        priceMult = parsedData.priceMult;
         priceAutoClicTimer1 = parsedData.priceAutoClicTimer1;
         priceAutoClicTimer2 = parsedData.priceAutoClicTimer2;
         priceAutoClicTimer3 = parsedData.priceAutoClicTimer3;
