Added crit dice roll and bonus

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -203,7 +203,7 @@
     				money -= priceAutoClicAmount1;
     				autoClicker[0].amount += 5;
     				priceAutoClicAmount1 *= 2;
-    				document.getElementById("butAutoAmount1").innerHTML = "Auto-clicker Timer Rank.1 [" + priceAutoClicAmount1 + "]";
+    				document.getElementById("butAutoAmount1").innerHTML = "Auto-clicker Amount Rank.1 [" + priceAutoClicAmount1 + "]";
 				}
     			else
     				console.log("Tu n'as pas assez de BDZHUGDIJ");
@@ -213,7 +213,7 @@
     				money -= priceAutoClicAmount2;
     				autoClicker[1].amount += 20;
     				priceAutoClicAmount2 *= 2;
-    				document.getElementById("butAutoAmount2").innerHTML = "Auto-clicker Timer Rank.2 [" + priceAutoClicAmount2 + "]";
+    				document.getElementById("butAutoAmount2").innerHTML = "Auto-clicker Amount Rank.2 [" + priceAutoClicAmount2 + "]";
     			}
     			else
     				console.log("Tu n'as pas assez de SCHNAPS");
@@ -223,7 +223,7 @@
     				money -= priceAutoClicAmount3;
     				autoClicker[2].amount += 50;
     				priceAutoClicAmount3 *= 2;
-    				document.getElementById("butAutoAmount3").innerHTML = "Auto-clicker Timer Rank.3 [" + priceAutoClicAmount3 + "]";
+    				document.getElementById("butAutoAmount3").innerHTML = "Auto-clicker Amount Rank.3 [" + priceAutoClicAmount3 + "]";
     			}
     			else
     				console.log("Croustipute !");
