--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="namenter">
             <div>
-                <input type="submit" value="Begin" onclick="Begin(), startCPS(), startPrestige(), StartInd()">
+                <input type="submit" value="Begin" onclick="begin(), startCPS(), startPrestige(), StartInd()">
                 <input type="submit" value="Load" onclick="load()">
                 <input type="submit" value="Recommencer" onclick="">
             </div>
