Fix time reset when loading

--- a/Coding Dojo/index.html
+++ b/Coding Dojo/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="namenter">
             <div>
-                <input type="submit" value="Begin" onclick="begin(), startCPS(), startPrestige(), StartInd()">
+                <input type="submit" value="Begin" onclick="begin(false), startCPS(), startPrestige(), StartInd()">
                 <input type="submit" value="Load" onclick="load()">
                 <input type="submit" value="Recommencer" onclick="">
             </div>
@@ -269,7 +269,7 @@
     }
 
     //Begin the game when a name is entered
-    function begin(){
+    function begin(load){
         name = document.getElementById("myName").value;
         if (name != ""){
             document.getElementById("tama").setAttribute("onclick", "clickImg()");
@@ -277,7 +277,9 @@
             var chronoAuto1 = (setInterval("autoClicking(autoClicker[0])", autoClicker[0].timer));
    			var chronoAuto2 = (setInterval("autoClicking(autoClicker[1])", autoClicker[1].timer));
    			var chronoAuto3 = (setInterval("autoClicking(autoClicker[2])", autoClicker[2].timer));
-            StartCount();
+   			if (load === false) {
+                StartCount();
+            }
         }
         else {
             document.getElementById("check").innerHTML = "Enter Your Name";
@@ -415,9 +417,6 @@
         }
     }
 
-
-
-
     var minutesLabel = document.getElementById("minutes");
     var secondsLabel = document.getElementById("seconds");
     var totalSeconds = 0;
@@ -521,7 +520,7 @@
         priceAutoClicAmount2 = parsedData.priceAutoClicAmount2;
         priceAutoClicAmount3 = parsedData.priceAutoClicAmount3;
         name = parsedData.name;
-        begin();
+        begin(true);
     }
 </script>
 </html>
